[package]
name = "runtipi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
get_if_addrs = "0.5.3"
hex = "0.4.3"
indicatif = "0.17.7"
libc = "0.2.152"
rand = "0.8.5"
semver = "1.0.21"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
